fix scroll issue on ios

--- a/style.scss
+++ b/style.scss
@@ -28,8 +28,7 @@ section {
   width: 100%;
   height: 100dvh;
   overflow: hidden;
-  // touch-action: none;
-  -webkit-overflow-scrolling: touch;
+  touch-action: none;
 }
 
 .section {
@@ -62,4 +61,5 @@ section {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
